# ChangeLog for media-gfx/autotrace
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/autotrace/ChangeLog,v 1.35 2010/02/11 20:22:36 jer Exp $

  11 Feb 2010; Jeroen Roovers <jer@gentoo.org> autotrace-0.31.1-r3.ebuild:
  Stable for HPPA (bug #291696).

  09 Dec 2009; Brent Baude <ranger@gentoo.org> autotrace-0.31.1-r3.ebuild:
  Marking autotrace-0.31.1-r3 ppc64 for bug 291696

*autotrace-0.31.1-r4 (18 Sep 2009)

  18 Sep 2009; Ryan Hill <dirtyepic@gentoo.org> +autotrace-0.31.1-r4.ebuild,
  +files/autotrace-0.31.1-pkgconfig.patch:
  Fix broken pkgconfig file, bug #283534 by Dominique Michel. Patch from
  Alexandre Rostovtsev.

  06 Sep 2009; Brent Baude <ranger@gentoo.org> autotrace-0.31.1-r3.ebuild:
  Marking autotrace-0.31.1-r3 ~ppc64 for bug 281573

  26 Aug 2009; Jeroen Roovers <jer@gentoo.org> autotrace-0.31.1-r3.ebuild:
  Marked ~hppa (bug #281573).

  05 Jun 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Retiring, bug 220219.

  09 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  +files/autotrace-0.31.1-m4.patch, autotrace-0.31.1-r3.ebuild:
  Add back wrongly dropped m4 patch.

  02 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  -files/autotrace-0.31.1-m4.patch, -files/autotrace-imagemagick.patch,
  -autotrace-0.31.1-r1.ebuild, autotrace-0.31.1-r3.ebuild:
  punt old

  12 Sep 2008; Markus Meier <maekke@gentoo.org> autotrace-0.31.1-r3.ebuild:
  amd64 stable, bug #236287

  06 Sep 2008; nixnut <nixnut@gentoo.org> autotrace-0.31.1-r3.ebuild:
  Stable on ppc wrt bug 236287

  01 Sep 2008; Raúl Porcel <armin76@gentoo.org> autotrace-0.31.1-r3.ebuild:
  alpha/ia64/sparc/x86 stable wrt #236287

  22 Aug 2008; Markus Meier <maekke@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  20 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
  autotrace-0.31.1-r3.ebuild:
  dev-util/pkgconfig added to DEPEND per bug 232425

*autotrace-0.31.1-r3 (09 Jun 2008)
